Renamed scripts in stratosphere_home/bin